src/BlasSharp.AppleAccelerate/NativeMethods.CBLAS.g.cs


        [DllImport(__DllName, EntryPoint = "cblas_csrot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_csrot(int __N, void* __X, int __incX, void* __Y, int __incY, float __c, float __s);

        [DllImport(__DllName, EntryPoint = "cblas_zdrot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zdrot(int __N, void* __X, int __incX, void* __Y, int __incY, double __c, double __s);

        [DllImport(__DllName, EntryPoint = "cblas_sgemv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_sgemv(uint __Order, uint __TransA, int __M, int __N, float __alpha, float* __A, int __lda, float* __X, int __incX, float __beta, float* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_sgbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_sgbmv(uint __Order, uint __TransA, int __M, int __N, int __KL, int __KU, float __alpha, float* __A, int __lda, float* __X, int __incX, float __beta, float* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_strmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_strmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, float* __A, int __lda, float* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_stbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_stbmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, int __K, float* __A, int __lda, float* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_stpmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_stpmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, float* __Ap, float* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_strsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_strsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, float* __A, int __lda, float* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_stbsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_stbsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, int __K, float* __A, int __lda, float* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_stpsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_stpsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, float* __Ap, float* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_dgemv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dgemv(uint __Order, uint __TransA, int __M, int __N, double __alpha, double* __A, int __lda, double* __X, int __incX, double __beta, double* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_dgbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dgbmv(uint __Order, uint __TransA, int __M, int __N, int __KL, int __KU, double __alpha, double* __A, int __lda, double* __X, int __incX, double __beta, double* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_dtrmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dtrmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, double* __A, int __lda, double* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_dtbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dtbmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, int __K, double* __A, int __lda, double* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_dtpmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dtpmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, double* __Ap, double* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_dtrsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dtrsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, double* __A, int __lda, double* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_dtbsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dtbsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, int __K, double* __A, int __lda, double* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_dtpsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dtpsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, double* __Ap, double* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_cgemv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cgemv(uint __Order, uint __TransA, int __M, int __N, void* __alpha, void* __A, int __lda, void* __X, int __incX, void* __beta, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_cgbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cgbmv(uint __Order, uint __TransA, int __M, int __N, int __KL, int __KU, void* __alpha, void* __A, int __lda, void* __X, int __incX, void* __beta, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_ctrmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ctrmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, void* __A, int __lda, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_ctbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ctbmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, int __K, void* __A, int __lda, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_ctpmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ctpmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, void* __Ap, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_ctrsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ctrsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, void* __A, int __lda, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_ctbsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ctbsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, int __K, void* __A, int __lda, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_ctpsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ctpsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, void* __Ap, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_zgemv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zgemv(uint __Order, uint __TransA, int __M, int __N, void* __alpha, void* __A, int __lda, void* __X, int __incX, void* __beta, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_zgbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zgbmv(uint __Order, uint __TransA, int __M, int __N, int __KL, int __KU, void* __alpha, void* __A, int __lda, void* __X, int __incX, void* __beta, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_ztrmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ztrmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, void* __A, int __lda, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_ztbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ztbmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, int __K, void* __A, int __lda, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_ztpmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ztpmv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, void* __Ap, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_ztrsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ztrsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, void* __A, int __lda, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_ztbsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ztbsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, int __K, void* __A, int __lda, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_ztpsv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ztpsv(uint __Order, uint __Uplo, uint __TransA, uint __Diag, int __N, void* __Ap, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_ssymv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ssymv(uint __Order, uint __Uplo, int __N, float __alpha, float* __A, int __lda, float* __X, int __incX, float __beta, float* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_ssbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ssbmv(uint __Order, uint __Uplo, int __N, int __K, float __alpha, float* __A, int __lda, float* __X, int __incX, float __beta, float* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_sspmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_sspmv(uint __Order, uint __Uplo, int __N, float __alpha, float* __Ap, float* __X, int __incX, float __beta, float* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_sger", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_sger(uint __Order, int __M, int __N, float __alpha, float* __X, int __incX, float* __Y, int __incY, float* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_ssyr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ssyr(uint __Order, uint __Uplo, int __N, float __alpha, float* __X, int __incX, float* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_sspr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_sspr(uint __Order, uint __Uplo, int __N, float __alpha, float* __X, int __incX, float* __Ap);
